(library
 (name mbase)
 (modules mbase)
 (public_name multiformats.mbase)
 (libraries core multiformats.base32 multiformats.base58)
 (inline_tests)
 (preprocess (pps ppx_jane)))

(library
 (name mbase_test)
 (modules mbase_test)
 (libraries core multiformats.mbase)
 (inline_tests)
 (preprocess (pps ppx_jane)))
